--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,7 +20,19 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": "src",
+    "paths": {
+      // "@*": ["*"],
+      "@common/*": ["domains/_common/*"],
+      "@auth/*": ["domains/auth/*"],
+      "@games/*": ["domains/games/*"],
+      "@main/*": ["domains/main/*"],
+      "@mypage/*": ["domains/mypage/*"],
+      "@news/*": ["domains/news/*"],
+      "@newSpecial/*": ["domains/newSpecial/*"]
+    }
   },
   "include": ["src"]
 }
