--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -2,7 +2,8 @@ name: Auto Assign Reviewers and Assignees
 
 on:
   pull_request:
-    types: [opened]
+    branches:
+      - dev # dev 브랜치로 들어오는 PR에만 실행
 
 jobs:
   auto-assign:
