task(common):Header.tsx 파일 생성, App.tsx 내 추가

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -31,7 +31,8 @@
       "@main/*": ["domains/main/*"],
       "@mypage/*": ["domains/mypage/*"],
       "@news/*": ["domains/news/*"],
-      "@newSpecial/*": ["domains/newSpecial/*"]
+      "@newSpecial/*": ["domains/newSpecial/*"],
+      "@components/*": ["components/*"]
     }
   },
   "include": ["src"]
