--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-error-boundary": "^4.1.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.0",
+    "swiper": "^11.1.15",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
