--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,6 +5,8 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "typeRoots": ["node_modules/@types", "node_modules/swiper"],
+    "types": ["swiper"],
 
     /* Bundler mode */
     "moduleResolution": "Bundler",
